[package]
name = "esp32c3-timer-panic"
version = "0.1.0"
authors = ["Joe Neeman <joeneeman@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32c3-hal", version = "0.9.0", features = ["embassy", "embassy-time-timg0"] }
esp-backtrace = { version = "0.7", features = ["esp32c3", "panic-handler", "print-uart"] }
esp-println = { version = "0.5", features = ["esp32c3"] }
embassy-executor = { version = "0.2.0", features = ["executor-thread", "arch-riscv32", "nightly"] }
embassy-time = { version = "0.1.1", features = ["nightly", "generic-queue-8"] }

# Uncomment the following two lines (and comment the ones above) to fix the panic.
#embassy-executor = { version = "0.2.0", features = ["executor-thread", "arch-riscv32", "nightly", "integrated-timers"] }
#embassy-time = { version = "0.1.1", features = ["nightly"] }
